feat(fingerprint): extend fingerprinting impl
