# packages/api/models/index.ts
@@ -11,6 +11,8 @@ export * from './CoverageAreaOut';
 export * from './CoverageOut';
 export * from './DepartureCandidate';
 export * from './DepartureComparison';
+export * from './EchoIn';
+export * from './EchoOut';
 export * from './ElevationIn';
 export * from './ElevationOut';
 export * from './ElevationPoint';
@@ -66,6 +68,8 @@ export * from './SubscribeIn';
 export * from './SubscribeOut';
 export * from './SystemBrowser';
 export * from './SystemBrowserAssessment';
+export * from './SystemBrowserStats';
+export * from './SystemBrowserStatsDay';
 export * from './SystemCacheCount';
 export * from './SystemCoverage';
 export * from './SystemCoveragePoint';
